k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-native-devops
  template:
    metadata:
      labels:
        app: cloud-native-devops
    spec:
      containers:
        - name: cloud-native-devops
          image: ghcr.io/milind-kapadnis/cloud-native-devops:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
