k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-native-devops-service

spec:
  type: NodePort

  selector:
    app: cloud-native-devops

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
