k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-devops-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloud-native-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-native-devops-service
                port:
                  number: 8000
